fixed overlap bug

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -35,8 +35,7 @@ section {
 }
 
 #heading-text {
-    position: relative;
-    top: 25%;
+    margin-top: 30px;
 }
 
 #portrait {
